# f2py_derived_nep

./: .gitignore  LICENSE  pixi.toml  readme.org
doc/: nep_draft.rst
examples/bindc/cfortran/: main.f90  meson.build  testCinterface.c  vec.f90  vecf.h
examples/bindc/dictionary/: meson.build  vecf.c
examples/bindc/pyclass/: graph_pyclass_timings.py  meson.build  pyclassderived.c  readme.org  timings_pyclass.py  vec.f90  vecf.h
examples/bindc/pyclass_opaque/: cwrappers.f90  f_cwrapper_test.f90  ftest.f90  meson.build  point.f90  point.h  pointcapsule.c  readme.org  testc.c
examples/bindc/pyclass_opaque/alloc_matrix/: cwrappers.f90  f_cwrapper_test.f90  ftest.f90  matrix.f90  meson.build  point.h  pointcapsule.c  readme.org  testc.c
examples/bindc/pyclass_opaque/alloc_matrix/tests/: test_point.py
examples/bindc/pyclass_opaque/cpython/: meson.build  point.c  point.h  pointcapsule.c  readme.org
examples/bindc/pyclass_opaque/simple_types/: .f2py_f2cmap  cwrappers.f90  meson.build  point.f90  pointcapsule.c  readme.org  testc.c
examples/bindc/pyclass_opaque/simple_types/tests/: test_simple.py
examples/bindc/pyclass_opaque/tb_proc/: cwrappers.f90  f_cwrapper_test.f90  point.f90  pointcapsule.c
examples/bindc/pyclass_opaque/tb_proc/tests/: test_point.py
examples/bindc/pyclass_opaque/tests/: test_point.py
examples/bindc/pydict/: meson.build  pydictderived.c  readme.org
